# YiriMirai

./: .gitignore  .sourcery.yaml  .style.yapf  README.md  api_provider.html  asgi.html  babel.config.js  bot.html  bot.pyi  bus.html  chain.txt  colorlog.html  docusaurus.config.js  exceptions.html  gen_pyi.py  index.html  mypy.ini  package.json  pyproject.toml  tasks.html  utils.html
.github/workflows/: deploy-to-vercel.yml  pdoc.yml  vercel-document.yml
YiriMirai/: __init__.py  bot.py  bus.py  colorlog.py  exceptions.py  utils.py
YiriMirai/adapters/: __init__.py  base.py  http.py
YiriMirai/models/: __init__.py  api.py  base.py  bus.py  entities.py  events.py  message.py
adapters/: base.html  compose.html  http.html  index.html  reverse_websocket.html  webhook.html  websocket.html
blog/: 2021-7-4-一些自动化集成的经验.md  2021-7-4-你好，YiriMirai！.md
docs/: asyncio-tutorial.mdx  changelog.md  faq.md  intro.md  quickstart.md  quickstart.mdx
docs/YiriMirai/: bot.html  bus.html  colorlog.html  exceptions.html  index.html  utils.html
docs/advanced/: _category_.json  event-bus.md  event-bus.mdx  structure-of-yiri-mirai.mdx
docs/advanced-tutorials/: _category_.json  structure-of-yiri-mirai.md
docs/basic/: _category_.json  call-api.md  embed-asgi.md  event-handling.mdx  message-chain.md  mirai-object.md  network-adapter.md
docs/basic-tutorials/: Mirai 对象.md  _category_.json  event-handling.mdx  mirai-object.md
docs/extensions/: _category_.json  about.md  trigger.mdx
docs/others/: _category_.json  api.js  api.mdx  event-chains.js  event-chains.mdx
mirai/: __init__.py  api_provider.py  asgi.py  bot.py  bot.pyi  bus.py  colorlog.py  exceptions.py  interface.py  tasks.py  utils.py
mirai/adapters/: __init__.py  base.py  compose.py  http.py  reverse_websocket.py  webhook.py  websocket.py
mirai/models/: __init__.py  api.py  api_impl.py  base.py  bus.py  entities.py  events.py  (+1 more)
models/: api.html  base.html  bus.html  entities.html  events.html  index.html  message.html
tests/: test_yirimirai.py
tutorials/: configuration.md  deploy.md  first-bot.md  first-bot.mdx  intro.md  manage-group.md  run-in-group.md  weather-query.mdx
(+33 files in other folders)
