[tool.poetry]
name = "yiri-mirai"
version = "0.1.3"
description = "一个轻量级、低耦合的基于 mirai-api-http 的 Python SDK。"
authors = ["忘忧北萱草 <wybxc@qq.com>"]
packages = [{ include="mirai" }]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://yiri-mirai.vercel.app"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.18.2"
pydantic = "^1.8.2"
websockets = "^9.1"
typing-extensions = {version = "^3.10.0", python = "3.7"}
uvicorn = {version = "^0.14.0", extras = ["uvicorn"]}
hypercorn = {version = "^0.11.2", extras = ["hypercorn"]}
starlette = "^0.15.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pdoc3 = "^0.9.2"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
